--- a/src/App.scss
+++ b/src/App.scss
@@ -56,12 +56,24 @@
       width: 60%;
       height: 100vh;
       background: #000;
+      overflow: hidden;
 
-      .bathroom {
-        position: absolute;
-        width: 100%;
-        height: 100%;
+
+      .bathroom-list {
+        .bathroom {
+          position: absolute;
+          height: 100%;
+          width: 0;
+
+        }
+
+
+        .active {
+          width: 100%;
+        }
+
       }
+
       .right-content {
         position: absolute;
         width: 100%;
@@ -91,9 +103,9 @@
           .right-content-list {
             display: flex;
             flex-direction: column;
-            gap: 20px;
             overflow: hidden;
             li {
+              padding: 10px 0;
               cursor: pointer;
               font-size: 20px;
               list-style: none;
@@ -101,15 +113,21 @@
               align-items: center;
               justify-content: right;
               &:hover {
-                &::after {
-                  margin-left: 10px;
-                  display: block;
-                  content: '';
-                  width: 15px;
-                  height: 15px;
-                  background: #fff;
-                  border-radius: 100%;
+                .circle {
+                  opacity: 1;
                 }
+              }
+              .circle {
+                transition: all 0.8s linear;
+
+                opacity: 0;
+                margin-left: 10px;
+                display: block;
+                content: '';
+                width: 15px;
+                height: 15px;
+                background: #fff;
+                border-radius: 100%;
               }
             }
           }
@@ -123,11 +141,7 @@
               border-radius: 2px;
               padding: 13px 19px;
               cursor: pointer;
-              &:nth-child(1) {
-                svg {
-                  transform: rotate(180deg);
-                }
-              }
+
             }
             .disable {
               background: #161616;
@@ -142,6 +156,7 @@
               }
             }
           }
+
         }
       }
     }
