--- a/src/Components/SideBar/index.scss
+++ b/src/Components/SideBar/index.scss
@@ -29,7 +29,7 @@
       -moz-user-select: none;
       -webkit-user-drag: none;
       -webkit-user-select: none;
-
+      fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:1.41421;
     }
   }
 }
